3.0917:
 - Fix: Recalc stats when building 1+x plans.
 - Fix: Station incoming shows your incoming as own, not station owner's incoming.
 - Fix: Better input validation for fleet.

3.0916:
 - Mod: Jackpot enhanced.
 - Fix: If parliament missing, better error handling.
 - Fix: Make sure scows display empty cargo on return.
 - Mod: Reduce some red tape.
 - Fix: Deployed bleeders shouldn't get subbed.
 - Fix: Destroying IBS removes all influence.
 - Fix: AIs' stations can now be destroyed.
 - Fix: Make owner of star a bit more predictable in case of ties.
 - Fix: Gauntlet now works at uni+1 level, too.
 - Fix: Saben will destroy planets with a bit more randomness.
 - Mod: Can stake your own stake.
 - Mod: Show plans in SSL in a predictable order (sorted!).

3.0915:
 - Fix: Reduce the wild resource fluctuations during planet ticking.
 - Mod: Evein plans get an extra 5 days start time for building.
 - Add: Lacuna promotions.
 - Add: Orbits as BHG targets.
 - UI : Add build-boost-from-happy to happy popup.
 - Add: Fingerprinting browsers.
 - UI : Essentia panel redone.
 - Mod: Better packaging for plans using flat boxes. (1,000 space used instead of 10,000)

3.0914:
 - UI : Evein draining re-added.
 - Fix: Effective level could be too high.
 - Fix: AI have a better chance to train a spy.
 - Mod: Subsidising buildings totals up more consistently.
 - Mod: Boost RPCs can take an optional weeks parameter.
 - Fix: Building counts were being returned wrong when building new buildings.

3.0913:
 - Add: Insurrect Value & SRCS happiness cost added to PCC output.
 - UI : Fix screen scrolling.
 - UI : Automatically load new captcha on failure (thanks, vortigon)
 - UI : New buildings have level visible immediately if user wants levels always displayed.
 - Mod: Limit shipyards to 30 days' queue.
 - Add: Constructing added to resource bar.
 - UI : Stop the "Trade Ministry is offline" message when repairing TM
 - UI : Added self-destruct button back.